# HPFoldRL

./: .gitignore  pyproject.toml  pytest.ini  script.sh
src/hp_problem/: __init__.py  moves.py
src/hp_problem/agents/: __init__.py  alphazero.py  dqn.py  tabular_q.py  tabular_q_simple_rewards.py
src/hp_problem/envs/: __init__.py  hp2d_env.py  hp2d_env_simple_rewards.py  hp3d_env.py  protein_folding_3d.py
src/hp_problem/models/: __init__.py  alphazero_models.py  attention_q_network.py  q_network.py
src/hp_problem/scripts/: monitor_trainings.py  train_alphazero.py  train_dqn.py  train_tabular_q.py
src/hp_problem/utils/: __init__.py  replay_buffer.py  replay_buffer_policy.py  visualize.py
tests/: test_envs.py  test_hp3d_env.py
